<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main"
    tools:context=".Jogo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_pontos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="000"
                    android:scaleY="2"
                    android:fontFamily="@font/abeezee"
                    android:typeface="normal"
                    android:textSize="15sp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorApp"
                    android:layout_centerVertical="true"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ponto"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_credito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:fontFamily="@font/abeezee"
                    android:typeface="normal"
                    android:textSize="15sp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorApp"
                    android:scaleY="2"
                    android:layout_marginRight="10dp"

                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/credito"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_ponto1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_bg"
                    />
                <ImageView
                    android:id="@+id/img_ponto2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_bg"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    />
                <ImageView
                    android:id="@+id/img_ponto3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_bg"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_pergunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_ad_video"
                    android:layout_width="match_parent"
                    android:background="@android:color/white"
                    app:cardCornerRadius="8dp"
                    android:layout_height="60dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ganhe_2mt_clique_aqui"
                            android:layout_marginLeft="10dp"
                            android:textSize="14sp"
                            android:layout_gravity="center_vertical"
                            />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_gravity="end"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/ic_delete"
                                android:layout_height="match_parent" />

                        </RelativeLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/ad_2"
                    android:layout_width="wrap_content"
                    android:background="@android:color/white"
                    android:layout_alignParentEnd="true"
                    app:cardCornerRadius="8dp"
                    android:layout_height="30dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ganhe_1mt_full_ad"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:textSize="14sp"
                            android:layout_centerInParent="true"
                            />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_compartilhar"
                    android:layout_below="@+id/ad_2"
                    android:layout_width="wrap_content"
                    android:background="@android:color/white"
                    android:layout_alignParentEnd="true"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_height="40dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/compartilhsr_3mt_compartilhar"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:textSize="14sp"
                            android:layout_centerInParent="true"
                            />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_resposta1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_bg"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_resposta2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_resposta3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button

                android:id="@+id/btn_resposta4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_bg"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="CLique no anucio" />

            </RelativeLayout>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner_test"></com.google.android.gms.ads.AdView>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner_test"></com.google.android.gms.ads.AdView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>